--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@element-plus/icons-vue": "^2.0.10",
     "element-plus": "^2.2.32",
     "vue": "^3.2.45",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
