--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.0.10",
+    "axios": "^1.3.4",
     "element-plus": "^2.2.32",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6",
