--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@element-plus/icons-vue": "^2.0.10",
     "axios": "^1.3.4",
     "element-plus": "^2.2.32",
+    "sass": "^1.59.3",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6",
     "vuex": "^4.0.2"
