--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.0.10",
     "axios": "^1.3.4",
+    "echarts": "^5.4.2",
     "element-plus": "^2.2.32",
     "sass": "^1.59.3",
     "vue": "^3.2.45",
+    "vue-echarts": "^6.5.4",
     "vue-router": "^4.1.6",
     "vuex": "^4.0.2"
   },
